2003-12-26  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (setup_handler): Protect against a race.

2003-12-26  Christopher Faylor  <cgf@redhat.com>

	* path.cc (mount_item::build_win32): Backslashify paths in non-managed
	case.

2003-12-25  Christopher Faylor  <cgf@redhat.com>

	* dcrt0.cc (reent_data): Reluctantly resurrect.
	(__cygwin_user_data::impure_ptr): Ditto.
	(_dll_crt0): Reluctantly initialize _impure_ptr here.
	(initialize_main_tls): Eliminate local_clib initialization since it now
	happens in init_thread.
	* init.cc (dll_entry): Reluctantly remove code which set _impure_ptr to
	the main thread's local_clib.
	* perthread.h (reent_data): Remove obsolete declaration.

	* sigproc.cc (proc_subproc): Add more debugging output.
	(get_proc_lock): Ditto.

	*dcrt0.cc (dll_crt0_1): Allocate argv[0] via malloc since main thread
	could exit.

2003-12-23  Christopher Faylor  <cgf@redhat.com>

	* fork.cc (fork_child): After a pthread/fork, ensure that impure
	pointer stuff which resides in parent is propagated to child thread.

2003-12-23  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (set_signal_mask): Redefine to not pass by address.
	Report calculated mask in debugging output.
	* sigproc.h (set_signal_mask): Reflect above change in declaration.

2003-12-22  Christopher Faylor  <cgf@redhat.com>

	* path.cc (mount_item::build_win32): Take path apart before feeding it
	to fnmunge.

2003-12-21  Christopher Faylor  <cgf@redhat.com>

	Throughout, change use of _reent_winsup()-> to _my_tls.locals.
	instead.
	Throughout, remove obsolete MT_SAFE/_CYG_THREAD_FAILSAFE considerations.
	Througout, add cygtls.h include.
	* Makefile.in (DLL_OFILES): Add cygtls.o.  Add some more objects to the
	-fomit-frame-pointer list.
	* acconfig.h: Remove obsolete settings.
	* config.h.in: Ditto.
	* bsdlib.cc: Add cygtls.h include.
	* configure.in: Remove --enable-extra-threadsafe-checking.
	* configure: Regenerate.